fix(demo): button vertical alignment (#2034)

--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -30,6 +30,7 @@
 
     &.email-text {
       display: flex;
+      flex-wrap: nowrap;
 
       a {
         font-size: 1.1428rem;
